# ui-cosmic-git

./: .gitignore  README.md  jsconfig.json  package-lock.json
backend/: README.md  conftest.py  package.json  pyproject.toml
backend/src/: main.py
backend/src/core/: env.py  exceptions.py  logger.py  middleware.py  redis.py  secrets.py  security.py
backend/src/database/: connection.py  init_db.py  models.py
backend/src/routes/: auth.py  donate.py  github.py  messages.py  server.mjs  server.py  settings.py
backend/src/schema/: auth_schema.py  donate_schema.py  github_schema.py  messages_schema.py  settings_schema.py
backend/src/services/: github-analytics.mjs  github-analytics.py  github_analytics.py
backend/src/tests/: test_auth.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AboutCard.jsx  ProfileCard.jsx  Startrigger.jsx  Statsreveal.jsx
frontend/src/components/effects/: BackgroundStars.jsx  ShootingStar.jsx  Startrigger.jsx
frontend/src/components/github/: AboutCard.jsx  ProfileCard.jsx  Statsreveal.jsx
frontend/src/services/: api.mjs
