[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-github-backend"
version = "0.1.0"
description = "backend services and routes with FastAPI"
readme = "README.md" 
requires-python = "~=3.12.0"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jose>=1.0.0",
    "mercadopago>=3.2.0",
    "passlib[bcrypt]>=1.7.4",
    "pg8000>=1.31.5",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
managed = true
